feat: add vault support
This PR adds a vault model and service for managing vaults.
Vaults include custom prefixes for managing the data plane's
access to environment variable based secrets.
This adds feature parity with kong running in control plane
mode.
